<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RegistrationForm">

    <TextView
        android:id="@+id/labelCreate"
        android:layout_width="320dp"
        android:layout_height="74dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="47dp"
        android:drawableStart="@drawable/backarrow"
        android:paddingTop="10dp"
        android:text="@string/create_an_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/labelEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="360dp"
        android:layout_height="0dp"
        android:layout_marginEnd="28dp"
        android:text="@string/email_address"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelCreate" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="22dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/passwordLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelEmail" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:text="@string/create_password"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="369dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="40dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/see_criteria_below"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/confirmPasswordLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />

    <TextView
        android:id="@+id/confirmPasswordLabel"
        android:layout_width="360dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:text="@string/repeat_password"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/confirmPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="360dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="35dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/enter_same_password_as_above"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordLabel" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="366dp"
        android:layout_height="103dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="41dp"
        android:maxLines="5"
        android:text="@string/your_password_should_have_a_minimum_of_8_characters_and_contain_at_least_one_number_one_uppercase_and_one_lower_case_letter"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="19dp"
        android:background="@color/gray"
        android:text="@string/click_me_to_save_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/check2"
        android:layout_width="23dp"
        android:layout_height="31dp"
        android:layout_marginTop="356dp"
        android:layout_marginEnd="64dp"
        android:visibility="invisible"
        android:src="@drawable/checkmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/check1"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:src="@drawable/checkmark"
        app:layout_constraintEnd_toStartOf="@+id/x1"
        app:layout_constraintTop_toTopOf="@+id/x1" />

    <ImageView
        android:id="@+id/check3"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/checkmark"
        app:layout_constraintEnd_toStartOf="@+id/x3"
        app:layout_constraintTop_toTopOf="@+id/x3" />

    <ImageView
        android:id="@+id/x1"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="9dp"
        android:src="@drawable/wrong"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/x2"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/wrong"
        app:layout_constraintStart_toEndOf="@+id/check2"
        app:layout_constraintTop_toTopOf="@+id/check2" />

    <ImageView
        android:id="@+id/x3"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/wrong"
        app:layout_constraintEnd_toEndOf="@+id/confirmPassword"
        app:layout_constraintTop_toTopOf="@+id/confirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>